--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -53,10 +53,17 @@ jobs:
         name: nuget-packages
         path: ./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg
 
+    - name: Remove NuGet sources
+      if: steps.check_files.outputs.files_exists == 'true'
+      run: |
+        dotnet nuget remove source nuget.org;
+        dotnet nuget remove source butr.github;
+
     - name: Push to NuGet
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate --api-key "${{ secrets.NUGET_API_KEY }}" -s "https://api.nuget.org/v3/index.json"
+        dotnet nuget add source https://api.nuget.org/v3/index.json --name NuGet
+        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate --api-key "${{ secrets.NUGET_API_KEY }}" --source NuGet
 
     - name: Push to GPR
       if: steps.check_files.outputs.files_exists == 'true'
