--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -38,6 +38,12 @@ jobs:
         dotnet tool install -g FetchBannerlordVersion.Tool;
         dotnet tool install -g BepInEx.AssemblyPublicizer.Cli;
 
+    - name: Remove NuGet sources
+      run: |
+        dotnet nuget list source;
+        dotnet nuget remove source nuget.org;
+        dotnet nuget remove source butr.github;
+
     - name: Run Bannerlord.ReferenceAssemblies
       run: dotnet run --project src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Release --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 261552 --steamDLCAppId 2927200 --feedUrl https://api.nuget.org/v3/index.json;
 
